<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:background="@color/grey_light"
    card_view:cardCornerRadius="5dp" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp" >
        <TextView
            android:id="@+id/TV_discount_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"

            android:textSize="24sp"
            android:text="@string/discount_header" />
        <TextView
            android:id="@+id/TV_discounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            android:textSize="14sp"
            android:textColor="@color/grey_dark"
            android:text="@string/no_discounts"/>
        <TextView
            android:id="@+id/TV_discount_footnote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="10sp"
            android:text="@string/discount_footnote"
            android:textColor="@color/grey_dark"/>
    </LinearLayout>
</android.support.v7.widget.CardView>