<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:background="@color/grey_light"
    card_view:cardCornerRadius="5dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_span="5"
        android:padding="8dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        style="?android:attr/buttonBarStyle" >

        <!-- Weather -->
        <Button
            android:id="@+id/BTN_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"

            style="?android:attr/buttonBarButtonStyle"
            android:drawableTop="@drawable/logo"
            android:drawablePadding="8dp"
            android:background="@android:color/white"

            android:text="@string/weather"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="@color/grey_light" />

        <!-- Add to cal -->
        <Button
            android:id="@+id/BTN_add_to_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"

            style="?android:attr/buttonBarButtonStyle"
            android:drawableTop="@drawable/logo"
            android:drawablePadding="8dp"
            android:background="@android:color/white"

            android:text="@string/add_to_cal"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="@color/grey_light" />

        <!-- Share -->
        <Button
            android:id="@+id/BTN_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"

            style="?android:attr/buttonBarButtonStyle"
            android:drawableTop="@drawable/logo"
            android:drawablePadding="8dp"
            android:background="@android:color/white"

            android:text="@string/share"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="@color/grey_light" />

        <!-- Email host -->
        <Button
            android:id="@+id/BTN_email_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"

            style="?android:attr/buttonBarButtonStyle"
            android:drawableTop="@drawable/logo"
            android:drawablePadding="8dp"
            android:background="@android:color/white"

            android:text="@string/email_host"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="@color/grey_light" />

        <!-- Add to cal -->
        <Button
            android:id="@+id/BTN_buy_tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"

            style="?android:attr/buttonBarButtonStyle"
            android:drawableTop="@drawable/logo"
            android:drawablePadding="8dp"
            android:background="@android:color/white"

            android:text="@string/buy_tickets"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="@color/grey_light" />

    </LinearLayout>
</android.support.v7.widget.CardView>