<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:background="@color/grey_light"
    card_view:cardCornerRadius="5dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@android:color/white" >

        <ImageView
            android:id="@+id/IMG_thumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/TV_title"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"

            android:src="@drawable/logo_circle_green"
            android:contentDescription="@string/image_description" />

        <TextView
            android:id="@+id/TV_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/IMG_thumbnail"
            android:layout_alignTop="@id/IMG_thumbnail"
            android:layout_marginLeft="8dp"

            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="20sp"
            android:text="@string/basic_error"/>

        <TextView
            android:id="@+id/TV_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/IMG_thumbnail"
            android:layout_below="@id/TV_name"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"

            android:textColor="@color/grey_light"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="14sp"
            android:text="@string/basic_error" />

        <TableLayout
            android:id="@+id/TL_time_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/IMG_thumbnail"
            android:padding="8dp"
            android:shrinkColumns="*"
            android:collapseColumns="*"
            android:stretchColumns="*"
            style="?android:attr/buttonBarStyle" >
            <TableRow
                android:id="@+id/TR_days_of_the_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView /> <!-- placeholder -->

                <TextView
                    android:id="@+id/TV_sunday_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/sunday"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/TV_monday_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/monday"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/TV_tuesday_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/tuesday"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/TV_wednesday_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/wednesday"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/TV_thursday_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/thursday"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/TV_friday_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/friday"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/TV_saturday_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/saturday"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:id="@+id/TR_open_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp" >
                <TextView
                    android:id="@+id/TV_open_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/open_label"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/TV_sunday_open"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_monday_open"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_tuesday_open"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_wednesday_open"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_thursday_open"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_friday_open"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_saturday_open"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
            </TableRow>
            <TableRow
                android:id="@+id/TR_closed_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp" >
                <TextView
                    android:id="@+id/TV_closed_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_label"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/TV_sunday_close"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_monday_close"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_tuesday_close"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_wednesday_close"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_thursday_close"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_friday_close"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
                <TextView
                    android:id="@+id/TV_saturday_close"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/closed_abbrv" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/BTN_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TL_time_table"
            android:layout_marginTop="8dp"
            style="?android:attr/buttonBarButtonStyle"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/call_restaurant" />
    </RelativeLayout>
</android.support.v7.widget.CardView>